fixed alignment on text counter and tweet button

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -26,9 +26,7 @@
 .pic-back{
     background-color: grey;
 }
-.button {
-    margin-right: 285px;
-}
+
 
 .actual-content{
     padding: 15px 0;
