--- a/public/styles/twitterForm.css
+++ b/public/styles/twitterForm.css
@@ -56,7 +56,6 @@
   }
   span#count {
     float: right;
-    margin-top: -20px;
 }
   .daycount{
     border-top: thick double #778899;
